Bug 30707 - Software fallback driver for OpenGL crashes Xserver
Summary: Software fallback driver for OpenGL crashes Xserver
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium major
Assignee: Carl Worth
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-08 07:12 UTC by Matthias Hopf
Modified: 2010-10-08 07:44 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Backtrace of Xorg (13.48 KB, text/plain)
2010-10-08 07:12 UTC, Matthias Hopf
no flags Details

Description Matthias Hopf 2010-10-08 07:12:30 UTC
Created attachment 39285 [details]
Backtrace of Xorg

intel driver 1444ea3, Xorg server 1.9.1-RC1, Mesa 7.9

Running

  LIBGL_ALWAYS_SOFTWARE=1 glxgears

crashes the Xserver. Backtrace attached.
Comment 1 Chris Wilson 2010-10-08 07:27:15 UTC
Gah, I even had the NULL checks in there once.

commit 5472359d6860af655a3c286d30558540376c9fdb
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Oct 8 15:23:13 2010 +0100

    dri: Check for pixmap privates before dereferencing them
    
    It is still possible for the pixmap allocator to return a software only
    pixmap (i.e. without an associated GEM buffer or intel_pixmap), so check
    before dereferencing.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=30707
    Reported-by: Matthias Hopf <mhopf@suse.de>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 Matthias Hopf 2010-10-08 07:39:47 UTC
Wow, that was quick!

Thanks, Chris
Comment 3 Chris Wilson 2010-10-08 07:44:56 UTC
I don't promise that is the last one. ;-)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.